--- a/Shared/Localizations/vi.lproj/Localizable.strings
+++ b/Shared/Localizations/vi.lproj/Localizable.strings
@@ -312,6 +312,9 @@
 "SETTINGS_VIEW_CONTROLLER_CELL_UPDATE_LOCAL_CERTIFICATE_UPDATING" = "Đang cập nhật chứng chỉ cục bộ";
 "SETTINGS_VIEW_CONTROLLER_CELL_RESET" = "Đặt lại";
 "SETTINGS_VIEW_CONTROLLER_CELL_RESET_ALL" = "Đặt lại tất cả";
+"SETTINGS_VIEW_CONTROLLER_CELL_RESET_ALL_SETTINGS" = "Đặt lại tất cả cài đặt";
+"SETTINGS_VIEW_CONTROLLER_CELL_RESET_ALL_SETTINGS_DESCRIPTION" = "Hành động này KHÔNG THỂ PHỤC HỒI. Ứng dụng sẽ trở về trạng thái ban đầu.";
+"SETTINGS_VIEW_CONTROLLER_CELL_RESET_ALL_SETTINGS_PROCEED" = "Thực hiện";
 
 "SETTINGS_VIEW_CONTROLLER_CELL_RESET_CONFIGURATION" = "Đặt lại cấu hình";
 "SETTINGS_VIEW_CONTROLLER_CELL_USE_CUSTOM_SERVER" = "Sử dụng máy chủ tùy chỉnh";
