--- a/Shared/Localizations/en.lproj/Localizable.strings
+++ b/Shared/Localizations/en.lproj/Localizable.strings
@@ -315,6 +315,9 @@
 "SETTINGS_VIEW_CONTROLLER_CELL_UPDATE_LOCAL_CERTIFICATE_UPDATING" = "Update Local Certificate";
 "SETTINGS_VIEW_CONTROLLER_CELL_RESET" = "Reset";
 "SETTINGS_VIEW_CONTROLLER_CELL_RESET_ALL" = "Reset All";
+"SETTINGS_VIEW_CONTROLLER_CELL_RESET_ALL_SETTINGS" = "Reset All Settings";
+"SETTINGS_VIEW_CONTROLLER_CELL_RESET_ALL_SETTINGS_DESCRIPTION" = "This action is IRREVERSIBLE. The app will go back to its original state.";
+"SETTINGS_VIEW_CONTROLLER_CELL_RESET_ALL_SETTINGS_PROCEED" = "Proceed";
 
 "SETTINGS_VIEW_CONTROLLER_CELL_RESET_CONFIGURATION" = "Reset Configuration";
 "SETTINGS_VIEW_CONTROLLER_CELL_USE_CUSTOM_SERVER" = "Use Custom Server";
