--- a/Shared/Localizations/en.lproj/Localizable.strings
+++ b/Shared/Localizations/en.lproj/Localizable.strings
@@ -105,6 +105,8 @@
 // MARK: - SourcesViewController
 // Repositories title
 "SOURCES_VIEW_CONTROLLER_REPOSITORIES" = "Repositories";
+"SOURCES_VIEW_CONTROLLER_REPOSITORIES_ALL" = "All Repositories";
+"SOURCES_VIEW_CONTROLLER_REPOSITORIES_SEE_ALL" = "See all apps from your sources";
 // Add repo button
 "SOURCES_VIEW_CONTROLLER_ADD_SOURCES" = "Add Repo";
 // Number of sources, i.e. "100 Sources"
@@ -119,6 +121,7 @@
 "SOURCES_VIEW_ADD_SOURCES_ALERT_BUTTON_IMPORT_REPO" = "Import Repositories";
 "SOURCES_VIEW_ADD_SOURCES_ALERT_BUTTON_EXPORT_REPO" = "Export Repositories";
 "SOURCES_VIEW_ADD_SOURCES_ALERT_BUTTON_EXPORT_REPO_ACTION_SUCCESS" = "Copied Repositories to Clipboard";
+"SOURCES_VIEW_ADD_SOURCES_ALERT_SUPPORT" = "Supports importing from KravaSign and ESign";
 //Footer Validation
 "SOURCES_VIEW_ADD_SOURCES_FOOTER_NOTSTARTED" = "Enter a URL to start validation.";
 "SOURCES_VIEW_ADD_SOURCES_FOOTER_NOTVALIDJSON" = "Invalid JSON, please check your input.";
