--- a/Shared/Localizations/en.lproj/Localizable.strings
+++ b/Shared/Localizations/en.lproj/Localizable.strings
@@ -323,6 +323,11 @@
 "SETTINGS_VIEW_CONTROLLER_CELL_RESET_ALL_SETTINGS" = "Reset All Settings";
 "SETTINGS_VIEW_CONTROLLER_CELL_RESET_ALL_SETTINGS_DESCRIPTION" = "This action is IRREVERSIBLE. The app will go back to its original state.";
 "SETTINGS_VIEW_CONTROLLER_CELL_RESET_ALL_SETTINGS_PROCEED" = "Proceed";
+"SETTINGS_VIEW_CONTROLLER_CELL_RESET_NETWORK_CACHE" = "Reset Network Cache";
+"SETTINGS_VIEW_CONTROLLER_CELL_RESET_SOURCES" = "Reset Sources";
+"SETTINGS_VIEW_CONTROLLER_CELL_RESET_SIGNED_APPS" = "Reset Signed Apps";
+"SETTINGS_VIEW_CONTROLLER_CELL_RESET_DOWNLOADED_APPS" = "Reset Downloaded Apps";
+"SETTINGS_VIEW_CONTROLLER_CELL_RESET_CERTIFICATES" = "Reset Certificates";
 
 "SETTINGS_VIEW_CONTROLLER_CELL_RESET_CONFIGURATION" = "Reset Configuration";
 "SETTINGS_VIEW_CONTROLLER_CELL_USE_CUSTOM_SERVER" = "Use Custom Server";
