--- a/Shared/Localizations/vi.lproj/Localizable.strings
+++ b/Shared/Localizations/vi.lproj/Localizable.strings
@@ -320,6 +320,11 @@
 "SETTINGS_VIEW_CONTROLLER_CELL_RESET_ALL_SETTINGS" = "Đặt lại tất cả cài đặt";
 "SETTINGS_VIEW_CONTROLLER_CELL_RESET_ALL_SETTINGS_DESCRIPTION" = "Hành động này KHÔNG THỂ PHỤC HỒI. Ứng dụng sẽ trở về trạng thái ban đầu.";
 "SETTINGS_VIEW_CONTROLLER_CELL_RESET_ALL_SETTINGS_PROCEED" = "Thực hiện";
+"SETTINGS_VIEW_CONTROLLER_CELL_RESET_NETWORK_CACHE" = "Đặt lại bộ nhớ đệm (mạng)";
+"SETTINGS_VIEW_CONTROLLER_CELL_RESET_SOURCES" = "Đặt lại nguồn";
+"SETTINGS_VIEW_CONTROLLER_CELL_RESET_SIGNED_APPS" = "Đặt lại ứng dụng đã ký";
+"SETTINGS_VIEW_CONTROLLER_CELL_RESET_DOWNLOADED_APPS" = "Đặt lại ứng dụng đã tải xuống";
+"SETTINGS_VIEW_CONTROLLER_CELL_RESET_CERTIFICATES" = "Đặt lại chứng chỉ";
 
 "SETTINGS_VIEW_CONTROLLER_CELL_RESET_CONFIGURATION" = "Đặt lại cấu hình";
 "SETTINGS_VIEW_CONTROLLER_CELL_USE_CUSTOM_SERVER" = "Sử dụng máy chủ tùy chỉnh";
