--- a/Shared/Localizations/en.lproj/Localizable.strings
+++ b/Shared/Localizations/en.lproj/Localizable.strings
@@ -328,6 +328,11 @@
 "SETTINGS_VIEW_CONTROLLER_CELL_RESET_SIGNED_APPS" = "Reset Signed Apps";
 "SETTINGS_VIEW_CONTROLLER_CELL_RESET_DOWNLOADED_APPS" = "Reset Downloaded Apps";
 "SETTINGS_VIEW_CONTROLLER_CELL_RESET_CERTIFICATES" = "Reset Certificates";
+"SETTINGS_VIEW_CONTROLLER_CELL_RESET_NETWORK_CACHE_SIZE" = "Network Cache size: %@";
+"SETTINGS_VIEW_CONTROLLER_CELL_SOURCES_COUNT" = "Source Count: %d";
+"SETTINGS_VIEW_CONTROLLER_CELL_DOWNLOADED_APPS_COUNT" = "Downloaded App Count: %d";
+"SETTINGS_VIEW_CONTROLLER_CELL_SIGNED_APPS_COUNT" = "Signed App Count: %d";
+"SETTINGS_VIEW_CONTROLLER_CELL_CERTIFICATES_COUNT" = "Certificate Count: %d";
 
 "SETTINGS_VIEW_CONTROLLER_CELL_RESET_CONFIGURATION" = "Reset Configuration";
 "SETTINGS_VIEW_CONTROLLER_CELL_USE_CUSTOM_SERVER" = "Use Custom Server";
