--- a/Shared/Localizations/vi.lproj/Localizable.strings
+++ b/Shared/Localizations/vi.lproj/Localizable.strings
@@ -325,6 +325,11 @@
 "SETTINGS_VIEW_CONTROLLER_CELL_RESET_SIGNED_APPS" = "Đặt lại ứng dụng đã ký";
 "SETTINGS_VIEW_CONTROLLER_CELL_RESET_DOWNLOADED_APPS" = "Đặt lại ứng dụng đã tải xuống";
 "SETTINGS_VIEW_CONTROLLER_CELL_RESET_CERTIFICATES" = "Đặt lại chứng chỉ";
+"SETTINGS_VIEW_CONTROLLER_CELL_RESET_NETWORK_CACHE_SIZE" = "Bộ nhớ đệm (mạng): %@";
+"SETTINGS_VIEW_CONTROLLER_CELL_SOURCES_COUNT" = "Nguồn: %d";
+"SETTINGS_VIEW_CONTROLLER_CELL_DOWNLOADED_APPS_COUNT" = "Ứng dụng đã tải xuống: %d";
+"SETTINGS_VIEW_CONTROLLER_CELL_SIGNED_APPS_COUNT" = "Ứng dụng đã ký: %d";
+"SETTINGS_VIEW_CONTROLLER_CELL_CERTIFICATES_COUNT" = "Chứng chỉ: %d";
 
 "SETTINGS_VIEW_CONTROLLER_CELL_RESET_CONFIGURATION" = "Đặt lại cấu hình";
 "SETTINGS_VIEW_CONTROLLER_CELL_USE_CUSTOM_SERVER" = "Sử dụng máy chủ tùy chỉnh";
