--- a/Shared/Localizations/vi.lproj/Localizable.strings
+++ b/Shared/Localizations/vi.lproj/Localizable.strings
@@ -307,7 +307,7 @@
 "SETTINGS_VIEW_CONTROLLER_CELL_CURRENT_CERTIFICATE_NOSELECTED" = "Chưa chọn chứng chỉ nào";
 "SETTINGS_VIEW_CONTROLLER_CELL_ADD_CERTIFICATES" = "Thêm chứng chỉ";
 
-"SETTINGS_VIEW_CONTROLLER_CELL_SIGN_OPTIONS" = "Tùy chọn ký tên";
+"SETTINGS_VIEW_CONTROLLER_CELL_SIGN_OPTIONS" = "Tùy chọn ký";
 "SETTINGS_VIEW_CONTROLLER_CELL_SERVER_OPTIONS" = "Tùy chọn máy chủ";
 "SETTINGS_VIEW_CONTROLLER_CELL_VIEW_LOGS" = "Xem nhật ký";
 "SETTINGS_VIEW_CONTROLLER_CELL_APPS_FOLDER" = "Mở thư mục ứng dụng";
