--- a/Shared/Localizations/vi.lproj/Localizable.strings
+++ b/Shared/Localizations/vi.lproj/Localizable.strings
@@ -300,7 +300,7 @@
 // About Feather
 "SETTINGS_VIEW_CONTROLLER_CELL_ABOUT" = "Về %@";
 "SETTINGS_VIEW_CONTROLLER_CELL_SUBMIT_FEEDBACK" = "Gửi phản hồi";
-"SETTINGS_VIEW_CONTROLLER_CELL_GITHUB" = "Kho GitHub";
+"SETTINGS_VIEW_CONTROLLER_CELL_GITHUB" = "Trang GitHub";
 "SETTINGS_VIEW_CONTROLLER_CELL_DISPLAY" = "Hiển thị";
 "SETTINGS_VIEW_CONTROLLER_CELL_APP_ICON" = "Biểu tượng ứng dụng";
 "SETTINGS_VIEW_CONTROLLER_CELL_LANGUAGE" = "Ngôn ngữ";
