--- a/Shared/Localizations/en.lproj/Localizable.strings
+++ b/Shared/Localizations/en.lproj/Localizable.strings
@@ -182,6 +182,9 @@
 "APP_SIGNING_VIEW_CONTROLLER_START_SIGNING" = "Start Signing";
 "APP_SIGNING_VIEW_CONTROLLER_CELL_MODIFY_DYLIBS" = "Modify Dylibs";
 "APP_SIGNING_VIEW_CONTROLLER_CELL_PROPERTIES" = "Properties";
+"APP_SIGNING_VIEW_CONTROLLER_CELL_OPTION_AUTOMATIC" = "Automatic";
+"APP_SIGNING_VIEW_CONTROLLER_CELL_OPTION_LIGHT" = "Light";
+"APP_SIGNING_VIEW_CONTROLLER_CELL_OPTION_DARK" = "Dark";
 
 // MARK: - AppSigningViewController - No Certificates Alert
 "APP_SIGNING_VIEW_CONTROLLER_NO_CERTS_ALERT_TITLE" = "Error";
