--- a/Shared/Localizations/vi.lproj/Localizable.strings
+++ b/Shared/Localizations/vi.lproj/Localizable.strings
@@ -182,6 +182,9 @@
 "APP_SIGNING_VIEW_CONTROLLER_START_SIGNING" = "Bắt đầu ký";
 "APP_SIGNING_VIEW_CONTROLLER_CELL_MODIFY_DYLIBS" = "Sửa đổi Dylibs";
 "APP_SIGNING_VIEW_CONTROLLER_CELL_PROPERTIES" = "Thuộc tính";
+"APP_SIGNING_VIEW_CONTROLLER_CELL_OPTION_AUTOMATIC" = "Tự động";
+"APP_SIGNING_VIEW_CONTROLLER_CELL_OPTION_LIGHT" = "Sáng";
+"APP_SIGNING_VIEW_CONTROLLER_CELL_OPTION_DARK" = "Tối";
 
 // MARK: - AppSigningViewController - No Certificates Alert
 "APP_SIGNING_VIEW_CONTROLLER_NO_CERTS_ALERT_TITLE" = "Lỗi";
