--- a/Shared/Localizations/en.lproj/Localizable.strings
+++ b/Shared/Localizations/en.lproj/Localizable.strings
@@ -302,6 +302,7 @@
 // Cell Titles
 // About Feather
 "SETTINGS_VIEW_CONTROLLER_CELL_ABOUT" = "About %@";
+"SETTINGS_VIEW_CONTROLLER_CELL_ABOUT_VERSION" = "Version %1$@ (Build %2$@)";
 "SETTINGS_VIEW_CONTROLLER_CELL_SUBMIT_FEEDBACK" = "Submit Feedback";
 "SETTINGS_VIEW_CONTROLLER_CELL_GITHUB" = "GitHub Repository";
 "SETTINGS_VIEW_CONTROLLER_CELL_DISPLAY" = "Display";
