--- a/Shared/Localizations/vi.lproj/Localizable.strings
+++ b/Shared/Localizations/vi.lproj/Localizable.strings
@@ -302,6 +302,7 @@
 // Cell Titles
 // About Feather
 "SETTINGS_VIEW_CONTROLLER_CELL_ABOUT" = "Về %@";
+"SETTINGS_VIEW_CONTROLLER_CELL_ABOUT_VERSION" = "Phiên bản %1$@ (Bản dựng %2$@)";
 "SETTINGS_VIEW_CONTROLLER_CELL_SUBMIT_FEEDBACK" = "Gửi phản hồi";
 "SETTINGS_VIEW_CONTROLLER_CELL_GITHUB" = "Dự án GitHub";
 "SETTINGS_VIEW_CONTROLLER_CELL_DISPLAY" = "Hiển thị";
