--- a/Shared/Localizations/en.lproj/Localizable.strings
+++ b/Shared/Localizations/en.lproj/Localizable.strings
@@ -360,7 +360,7 @@
 
 "ABOUT_VIEW_CONTROLLER_SECTION_TITLE_DEVICE" = "Device";
 "ABOUT_VIEW_CONTROLLER_SECTION_TITLE_ACKNOWLEDGEMENTS" = "Acknowledgements";
-
+"ABOUT_VIEW_CONTROLLER_SECTION_TITLE_THANKS" = "💙 This couldn't of been done without my sponsors!";
 
 "ABOUT_VIEW_CONTROLLER_CELL_DEVICE_VERSION" = "Device Version";
 "ABOUT_VIEW_CONTROLLER_CELL_DEVICE_ARCH" = "Architecture";
