--- a/Shared/Localizations/vi.lproj/Localizable.strings
+++ b/Shared/Localizations/vi.lproj/Localizable.strings
@@ -185,6 +185,10 @@
 "APP_SIGNING_VIEW_CONTROLLER_CELL_OPTION_AUTOMATIC" = "Tự động";
 "APP_SIGNING_VIEW_CONTROLLER_CELL_OPTION_LIGHT" = "Sáng";
 "APP_SIGNING_VIEW_CONTROLLER_CELL_OPTION_DARK" = "Tối";
+"APP_SIGNING_VIEW_CONTROLLER_CELL_ALERT_ADVANCED_USERS_ONLY_TITLE" = "CHỈ DÀNH CHO NGƯỜI DÙNG NÂNG CAO";
+"APP_SIGNING_VIEW_CONTROLLER_CELL_ALERT_ADVANCED_USERS_ONLY_MESSAGE" = "Phần này có thể khiến các ứng dụng đã cài đặt KHÔNG SỬ DỤNG ĐƯỢC và có khả năng KHÔNG ỔN ĐỊNH. SỬ DỤNG PHẦN NÀY MỘT CÁCH THẬN TRỌNG, NẾU BẠN KHÔNG BIẾT MÌNH ĐANG LÀM GÌ, VUI LÒNG RỜI KHỎI.\n\nNẾU BẠN GẶP VẤN ĐỀ Ở ĐÂY, NÓ SẼ NGAY LẬP TỨC BỊ ĐÓNG VÀ BỎ QUA.";
+"APP_SIGNING_VIEW_CONTROLLER_CELL_ALERT_ADVANCED_USERS_ONLY_WHO_CARES" = "Méo quan tâm";
+
 
 // MARK: - AppSigningViewController - No Certificates Alert
 "APP_SIGNING_VIEW_CONTROLLER_NO_CERTS_ALERT_TITLE" = "Lỗi";
