--- a/Shared/Localizations/en.lproj/Localizable.strings
+++ b/Shared/Localizations/en.lproj/Localizable.strings
@@ -185,6 +185,9 @@
 "APP_SIGNING_VIEW_CONTROLLER_CELL_OPTION_AUTOMATIC" = "Automatic";
 "APP_SIGNING_VIEW_CONTROLLER_CELL_OPTION_LIGHT" = "Light";
 "APP_SIGNING_VIEW_CONTROLLER_CELL_OPTION_DARK" = "Dark";
+"APP_SIGNING_VIEW_CONTROLLER_CELL_ALERT_ADVANCED_USERS_ONLY_TITLE" = "ADVANCED USERS ONLY";
+"APP_SIGNING_VIEW_CONTROLLER_CELL_ALERT_ADVANCED_USERS_ONLY_MESSAGE" = "This section can make installed applications UNUSABLE and potentially UNSTABLE. USE THIS SECTION WITH CAUTION, IF YOU HAVE NO IDEA WHAT YOU'RE DOING, PLEASE LEAVE.\n\nIF YOU MAKE AN ISSUE ON THIS, IT WILL IMMEDIATELY BE CLOSED AND IGNORED.";
+"APP_SIGNING_VIEW_CONTROLLER_CELL_ALERT_ADVANCED_USERS_ONLY_WHO_CARES" = "WHO CARES";
 
 // MARK: - AppSigningViewController - No Certificates Alert
 "APP_SIGNING_VIEW_CONTROLLER_NO_CERTS_ALERT_TITLE" = "Error";
