--- a/Shared/Localizations/en.lproj/Localizable.strings
+++ b/Shared/Localizations/en.lproj/Localizable.strings
@@ -313,7 +313,13 @@
 "SETTINGS_VIEW_CONTROLLER_CELL_LANGUAGE" = "Language";
 "SETTINGS_VIEW_CONTROLLER_CELL_CURRENT_CERTIFICATE_NOSELECTED" = "No certificates selected";
 "SETTINGS_VIEW_CONTROLLER_CELL_ADD_CERTIFICATES" = "Add Certificate";
-
+"SETTINGS_VIEW_CONTROLLER_CELL_DISPLAY_COLOR_DEFAULT" = "Default";
+"SETTINGS_VIEW_CONTROLLER_CELL_DISPLAY_COLOR_BERRY" = "Berry";
+"SETTINGS_VIEW_CONTROLLER_CELL_DISPLAY_COLOR_MINT" = "Mint";
+"SETTINGS_VIEW_CONTROLLER_CELL_DISPLAY_COLOR_DR_PEPPER" = "Dr Pepper";
+"SETTINGS_VIEW_CONTROLLER_CELL_DISPLAY_COLOR_COOL_BLUE" = "Cool Blue";
+"SETTINGS_VIEW_CONTROLLER_CELL_DISPLAY_COLOR_FUCHSIA" = "Fuchsia";
+"SETTINGS_VIEW_CONTROLLER_CELL_DISPLAY_COLOR_PURPLISH" = "Purplish";
 
 
 "SETTINGS_VIEW_CONTROLLER_CELL_SIGN_OPTIONS" = "Signing Options";
