--- a/Shared/Localizations/en.lproj/Localizable.strings
+++ b/Shared/Localizations/en.lproj/Localizable.strings
@@ -320,6 +320,10 @@
 "SETTINGS_VIEW_CONTROLLER_CELL_DISPLAY_COLOR_COOL_BLUE" = "Cool Blue";
 "SETTINGS_VIEW_CONTROLLER_CELL_DISPLAY_COLOR_FUCHSIA" = "Fuchsia";
 "SETTINGS_VIEW_CONTROLLER_CELL_DISPLAY_COLOR_PURPLISH" = "Purplish";
+"SETTINGS_VIEW_CONTROLLER_CELL_DISPLAY_UI_MODE_SYSTEM" = "System";
+"SETTINGS_VIEW_CONTROLLER_CELL_DISPLAY_UI_MODE_LIGHT" = "Light";
+"SETTINGS_VIEW_CONTROLLER_CELL_DISPLAY_UI_MODE_DARK" = "Dark";
+"SETTINGS_VIEW_CONTROLLER_CELL_DISPLAY_UI_MODE_UNKNOWN" = "Unknown Mode";
 
 
 "SETTINGS_VIEW_CONTROLLER_CELL_SIGN_OPTIONS" = "Signing Options";
