--- a/Shared/Localizations/vi.lproj/Localizable.strings
+++ b/Shared/Localizations/vi.lproj/Localizable.strings
@@ -314,6 +314,17 @@
 "SETTINGS_VIEW_CONTROLLER_CELL_LANGUAGE" = "Ngôn ngữ";
 "SETTINGS_VIEW_CONTROLLER_CELL_CURRENT_CERTIFICATE_NOSELECTED" = "Chưa chọn chứng chỉ nào";
 "SETTINGS_VIEW_CONTROLLER_CELL_ADD_CERTIFICATES" = "Thêm chứng chỉ";
+"SETTINGS_VIEW_CONTROLLER_CELL_DISPLAY_COLOR_DEFAULT" = "Mặc định";
+"SETTINGS_VIEW_CONTROLLER_CELL_DISPLAY_COLOR_BERRY" = "Dâu rừng";
+"SETTINGS_VIEW_CONTROLLER_CELL_DISPLAY_COLOR_MINT" = "Bạc hà";
+"SETTINGS_VIEW_CONTROLLER_CELL_DISPLAY_COLOR_DR_PEPPER" = "Dr Pepper";
+"SETTINGS_VIEW_CONTROLLER_CELL_DISPLAY_COLOR_COOL_BLUE" = "Xanh lạnh";
+"SETTINGS_VIEW_CONTROLLER_CELL_DISPLAY_COLOR_FUCHSIA" = "Hồng Fuchsia";
+"SETTINGS_VIEW_CONTROLLER_CELL_DISPLAY_COLOR_PURPLISH" = "Tím nhẹ";
+"SETTINGS_VIEW_CONTROLLER_CELL_DISPLAY_UI_MODE_SYSTEM" = "Hệ thống";
+"SETTINGS_VIEW_CONTROLLER_CELL_DISPLAY_UI_MODE_LIGHT" = "Sáng";
+"SETTINGS_VIEW_CONTROLLER_CELL_DISPLAY_UI_MODE_DARK" = "Tối";
+"SETTINGS_VIEW_CONTROLLER_CELL_DISPLAY_UI_MODE_UNKNOWN" = "Không xác định";
 
 
 
