--- a/Shared/Localizations/vi.lproj/Localizable.strings
+++ b/Shared/Localizations/vi.lproj/Localizable.strings
@@ -22,7 +22,7 @@
 // Dismiss action
 "DISMISS" = "Bỏ qua";
 // Dismiss 2 action
-"LAME" = "Tệ";
+"LAME" = "OK";
 // Save action
 "SAVE" = "Lưu";
 // Set action
@@ -317,9 +317,9 @@
 "SETTINGS_VIEW_CONTROLLER_CELL_DISPLAY_COLOR_DEFAULT" = "Mặc định";
 "SETTINGS_VIEW_CONTROLLER_CELL_DISPLAY_COLOR_BERRY" = "Dâu rừng";
 "SETTINGS_VIEW_CONTROLLER_CELL_DISPLAY_COLOR_MINT" = "Bạc hà";
-"SETTINGS_VIEW_CONTROLLER_CELL_DISPLAY_COLOR_DR_PEPPER" = "Dr Pepper";
+"SETTINGS_VIEW_CONTROLLER_CELL_DISPLAY_COLOR_DR_PEPPER" = "Nâu đỏ";
 "SETTINGS_VIEW_CONTROLLER_CELL_DISPLAY_COLOR_COOL_BLUE" = "Xanh lạnh";
-"SETTINGS_VIEW_CONTROLLER_CELL_DISPLAY_COLOR_FUCHSIA" = "Hồng Fuchsia";
+"SETTINGS_VIEW_CONTROLLER_CELL_DISPLAY_COLOR_FUCHSIA" = "Hồng";
 "SETTINGS_VIEW_CONTROLLER_CELL_DISPLAY_COLOR_PURPLISH" = "Tím nhẹ";
 "SETTINGS_VIEW_CONTROLLER_CELL_DISPLAY_UI_MODE_SYSTEM" = "Hệ thống";
 "SETTINGS_VIEW_CONTROLLER_CELL_DISPLAY_UI_MODE_LIGHT" = "Sáng";
