--- a/Shared/Localizations/en.lproj/Localizable.strings
+++ b/Shared/Localizations/en.lproj/Localizable.strings
@@ -188,7 +188,11 @@
 "APP_SIGNING_VIEW_CONTROLLER_CELL_ALERT_ADVANCED_USERS_ONLY_TITLE" = "ADVANCED USERS ONLY";
 "APP_SIGNING_VIEW_CONTROLLER_CELL_ALERT_ADVANCED_USERS_ONLY_MESSAGE" = "This section can make installed applications UNUSABLE and potentially UNSTABLE. USE THIS SECTION WITH CAUTION, IF YOU HAVE NO IDEA WHAT YOU'RE DOING, PLEASE LEAVE.\n\nIF YOU MAKE AN ISSUE ON THIS, IT WILL IMMEDIATELY BE CLOSED AND IGNORED.";
 "APP_SIGNING_VIEW_CONTROLLER_CELL_ALERT_ADVANCED_USERS_ONLY_WHO_CARES" = "WHO CARES";
-"APP_SIGNING_VIEW_CONTROLLER_CELL_ALERT_ADVANCED_USERS_ONLY_REMOVE_DYLIBS" = "Remove Dylibs";
+"APP_SIGNING_VIEW_CONTROLLER_CELL_REMOVE_DYLIBS" = "Remove Dylibs";
+"APP_SIGNING_VIEW_CONTROLLER_CELL_SELECT_APP_ICON" = "Select App Icon";
+"APP_SIGNING_VIEW_CONTROLLER_CELL_SELECT_ALT_ICON" = "Select Alt Icon";
+"APP_SIGNING_VIEW_CONTROLLER_CELL_CHOOSE_FROM_FILES" = "Choose from Files";
+"APP_SIGNING_VIEW_CONTROLLER_CELL_CHOOSE_FROM_PHOTOS" = "Choose from Photos";
 
 // MARK: - AppSigningViewController - No Certificates Alert
 "APP_SIGNING_VIEW_CONTROLLER_NO_CERTS_ALERT_TITLE" = "Error";
