--- a/Shared/Localizations/en.lproj/Localizable.strings
+++ b/Shared/Localizations/en.lproj/Localizable.strings
@@ -22,6 +22,7 @@
 "DONE" = "Done";
 // Dismiss action
 "DISMISS" = "Dismiss";
+"CLOSE" = "Close";
 // Dismiss 2 action
 "LAME" = "Lame";
 // Save action
