--- a/Shared/Localizations/en.lproj/Localizable.strings
+++ b/Shared/Localizations/en.lproj/Localizable.strings
@@ -195,6 +195,8 @@
 "APP_SIGNING_VIEW_CONTROLLER_CELL_SELECT_ALT_ICON" = "Select Alt Icon";
 "APP_SIGNING_VIEW_CONTROLLER_CELL_CHOOSE_FROM_FILES" = "Choose from Files";
 "APP_SIGNING_VIEW_CONTROLLER_CELL_CHOOSE_FROM_PHOTOS" = "Choose from Photos";
+"APP_SIGNING_VIEW_CONTROLLER_CELL_NAV_TITLE_ALT_ICONS" = "Alt Icons";
+
 
 // MARK: - AppSigningViewController - No Certificates Alert
 "APP_SIGNING_VIEW_CONTROLLER_NO_CERTS_ALERT_TITLE" = "Error";
