--- a/Shared/Localizations/vi.lproj/Localizable.strings
+++ b/Shared/Localizations/vi.lproj/Localizable.strings
@@ -195,6 +195,7 @@
 "APP_SIGNING_VIEW_CONTROLLER_CELL_SELECT_ALT_ICON" = "Chọn icon thay thế";
 "APP_SIGNING_VIEW_CONTROLLER_CELL_CHOOSE_FROM_FILES" = "Chọn từ Tệp";
 "APP_SIGNING_VIEW_CONTROLLER_CELL_CHOOSE_FROM_PHOTOS" = "Chọn từ Ảnh";
+"APP_SIGNING_VIEW_CONTROLLER_CELL_NAV_TITLE_ALT_ICONS" = "Icon thay thế";
 
 
 // MARK: - AppSigningViewController - No Certificates Alert
