--- a/Shared/Localizations/vi.lproj/Localizable.strings
+++ b/Shared/Localizations/vi.lproj/Localizable.strings
@@ -281,6 +281,8 @@
 //Import Action Sheet
 "LIBRARY_VIEW_CONTROLLER_IMPORT_ACTION_SHEET_FILE" = "Nhập từ Tệp";
 "LIBRARY_VIEW_CONTROLLER_IMPORT_ACTION_SHEET_URL" = "Nhập từ URL";
+"LIBRARY_VIEW_CONTROLLER_IMPORTED_FROM_FILE" = "Được nhập từ Tệp";
+"LIBRARY_VIEW_CONTROLLER_IMPORTED_FROM_URL" = "Được nhập từ URL";
 //Sign Action Sheet
 "LIBRARY_VIEW_CONTROLLER_SIGN_ACTION_SIGN" = "Ký %@";
 "LIBRARY_VIEW_CONTROLLER_SIGN_ACTION_SIGN_INSTALL" = "Ký & Cài đặt %@";
