--- a/Shared/Localizations/en.lproj/Localizable.strings
+++ b/Shared/Localizations/en.lproj/Localizable.strings
@@ -282,6 +282,8 @@
 //Import Action Sheet
 "LIBRARY_VIEW_CONTROLLER_IMPORT_ACTION_SHEET_FILE" = "Import from Files";
 "LIBRARY_VIEW_CONTROLLER_IMPORT_ACTION_SHEET_URL" = "Import from URL";
+"LIBRARY_VIEW_CONTROLLER_IMPORTED_FROM_FILE" = "Imported from Files";
+"LIBRARY_VIEW_CONTROLLER_IMPORTED_FROM_URL" = "Imported from URL";
 //Sign Action Sheet
 "LIBRARY_VIEW_CONTROLLER_SIGN_ACTION_SIGN" = "Sign %@";
 "LIBRARY_VIEW_CONTROLLER_SIGN_ACTION_SIGN_INSTALL" = "Sign & Install %@";
