--- a/Shared/Localizations/vi.lproj/Localizable.strings
+++ b/Shared/Localizations/vi.lproj/Localizable.strings
@@ -273,11 +273,11 @@
 "SETTINGS_VIEW_CONTROLLER_SEARCH_PLACEHOLDER" = "Tìm kiếm thư viện";
 //Headers
 "LIBRARY_VIEW_CONTROLLER_SECTION_TITLE_SIGNED_APPS" = "Ứng dụng đã ký";
-"LIBRARY_VIEW_CONTROLLER_SECTION_TITLE_SIGNED_APPS_TOTAL" = "%@ Đã ký";
+"LIBRARY_VIEW_CONTROLLER_SECTION_TITLE_SIGNED_APPS_TOTAL" = "%@ ứng dụng đã ký";
 "LIBRARY_VIEW_CONTROLLER_SECTION_TITLE_SIGNED_APPS_TOTAL_PLURAL" = "%@ Đã ký";
 "LIBRARY_VIEW_CONTROLLER_SECTION_BUTTON_IMPORT" = "Nhập";
 "LIBRARY_VIEW_CONTROLLER_SECTION_DOWNLOADED_APPS" = "Ứng dụng đã tải xuống";
-"LIBRARY_VIEW_CONTROLLER_SECTION_TITLE_DOWNLOADED_APPS_TOTAL" = "%@ Đã tải xuống";
+"LIBRARY_VIEW_CONTROLLER_SECTION_TITLE_DOWNLOADED_APPS_TOTAL" = "%@ ứng dụng đã tải xuống";
 //Import Action Sheet
 "LIBRARY_VIEW_CONTROLLER_IMPORT_ACTION_SHEET_FILE" = "Nhập từ Tệp";
 "LIBRARY_VIEW_CONTROLLER_IMPORT_ACTION_SHEET_URL" = "Nhập từ URL";
