--- a/Shared/Localizations/vi.lproj/Localizable.strings
+++ b/Shared/Localizations/vi.lproj/Localizable.strings
@@ -177,7 +177,7 @@
 
 // MARK: - AppSigningViewController
 "APP_SIGNING_VIEW_CONTROLLER_CELL_TITLE_CUSTOMIZATION" = "Tùy chỉnh";
-"APP_SIGNING_VIEW_CONTROLLER_CELL_TITLE_SIGNING" = "Ký .ipa";
+"APP_SIGNING_VIEW_CONTROLLER_CELL_TITLE_SIGNING" = "Chứng chỉ";
 "APP_SIGNING_VIEW_CONTROLLER_CELL_TITLE_ADVANCED" = "Nâng cao";
 "APP_SIGNING_VIEW_CONTROLLER_CELL_ADD_TWEAKS" = "Thêm Tweaks";
 "APP_SIGNING_VIEW_CONTROLLER_CELL_ADVANCED" = "Nâng cao";
